--- a/wp-content/themes/dermer/css/scss/page_attbio.scss
+++ b/wp-content/themes/dermer/css/scss/page_attbio.scss
@@ -46,6 +46,10 @@ body.page-template-page-bio {
 					max-width:100%;
 					height:auto;
 				}
+				.avvo {
+					text-align: center;
+					margin-top:20px;
+				}
 			}
 		}
 		.inner_container_right {
