--- a/wp-content/themes/dermer/css/scss/homepage/_section_eight.scss
+++ b/wp-content/themes/dermer/css/scss/homepage/_section_eight.scss
@@ -6,7 +6,7 @@
 	&:after {
 		content:"";
 		width:1430px;
-		height: 889px;
+		height: 711px;
 		display: block;
 		background: #f5f5f5;
 		position: absolute;
@@ -61,6 +61,7 @@
 	flex-shrink: 0;
 	margin:240px 0 0;
 	padding:0 0 0 5.5%;
+	
 	span.large_header {
 		font-family: $playfair;
 		font-weight: 700;
@@ -80,7 +81,7 @@
 
 span.sec_eight_svg {
 	position: absolute;
-	top:727px;
+	top: 764px;
 	left: -44px;
 	svg {
 		width:455px;
@@ -146,8 +147,8 @@ span.sec_eight_svg {
   
   .sec_eight_right {
 	  margin: 107px 0 0;
-	  flex-basis: 740px;
 	  padding: 0 0 0 7%;
+	  flex-basis: 747px;
 	  span.large_header {
 		  font-size:92px;
 		  line-height: 100px;
@@ -247,6 +248,7 @@ span.sec_eight_svg {
 		order:1;
 		padding-left:0;
 		margin: 85px 0 0;
+		flex-basis: 100%;
 		span.large_header {
 			margin-bottom: 18px;
 		}
