--- a/wp-content/themes/dermer/css/scss/homepage/_section_five.scss
+++ b/wp-content/themes/dermer/css/scss/homepage/_section_five.scss
@@ -9,8 +9,8 @@
 	height:500px;
 	flex-basis: 33.333333%;
 	overflow: hidden;
-	padding-left:20px;
-	padding-right:20px;
+	// padding-left:20px;
+	// padding-right:20px;
 	a {
 		display: block;
 		&:hover {
