--- a/wp-content/themes/dermer/css/scss/homepage/_section_one.scss
+++ b/wp-content/themes/dermer/css/scss/homepage/_section_one.scss
@@ -8,13 +8,15 @@
 
 html.webp {
 	#section_one {
-		background: url(#{$themePath}images/hero-1920.webp) top center no-repeat;
+		background: url(#{$themePath}images/hero-1920.webp) top right no-repeat;
+		background-size:cover;
 	}
 }
 
 html.no-webp {
 	#section_one {
-		background: url(#{$themePath}images/hero-1920.jpg) top center no-repeat;
+		background: url(#{$themePath}images/hero-1920.jpg) top right no-repeat;
+		background-size:cover;
 	}
 }
 
@@ -150,6 +152,29 @@ a.button {
 } /* Media Query */
 
 
+
+
+
+@media screen and (max-width: 1320px) {
+	
+	
+html.webp {
+	#section_one {
+		background-position-x: -250px;
+	}
+}
+
+html.no-webp {
+	#section_one {
+		background-position-x: -250px;
+	}
+}
+	
+	
+	
+} /* Media Query */
+
+
 @media screen and (max-width: 1250px) {
 	
 	
@@ -157,6 +182,19 @@ a.button {
   margin: 100px 0 0;
   height:783px;
   
+}
+
+
+html.webp {
+	#section_one {
+		background-position:top right;
+	}
+}
+
+html.no-webp {
+	#section_one {
+		background-position:top right;
+	}
 }
 
 
@@ -218,12 +256,14 @@ a.button {
 html.webp {
 	#section_one {
 		background: url(#{$themePath}images/hero-768.webp) top center no-repeat;
+		background-size:cover;
 	}
 }
 
 html.no-webp {
 	#section_one {
 		background: url(#{$themePath}images/hero-768.jpg) top center no-repeat;
+		background-size:cover;
 	}
 }
 	
@@ -236,7 +276,7 @@ html.no-webp {
 	
 	
 	#section_one {
-		margin: 115px 0 0;
+		margin: 124px 0 0;
 		height: 503px;
 		// background: url(#{$themePath}images/hero-414.jpg) top center;
 		position: relative;
@@ -244,13 +284,13 @@ html.no-webp {
 	
 	html.webp {
 	#section_one {
-		background: url(#{$themePath}images/hero-414.webp) top center no-repeat;
+		//background: url(#{$themePath}images/hero-414.webp) top center no-repeat;
 	}
 }
 
 html.no-webp {
 	#section_one {
-		background: url(#{$themePath}images/hero-414.jpg) top center no-repeat;
+		//background: url(#{$themePath}images/hero-414.jpg) top center no-repeat;
 	}
 }
 
