changes for 1400 breakpoint

--- a/wp-content/themes/dermer/css/scss/_footer.scss
+++ b/wp-content/themes/dermer/css/scss/_footer.scss
@@ -273,13 +273,14 @@ footer {
 					font-weight: 700;
 					text-transform: lowercase;
 					font-size:17px;
-					padding:22px 37px;
 					width:100%;
 				}
 				input {
 					
+					padding:14px 25px;
 				}
 				textarea {
+					padding: 25px;
 					height:220px;
 				}
 			}
