--- a/wp-content/themes/dermer/css/scss/homepage/_section_seven.scss
+++ b/wp-content/themes/dermer/css/scss/homepage/_section_seven.scss
@@ -2,7 +2,7 @@
 // 	background: url(#{$themePath}images/testimonials-bg-1920.jpg) top center;
 	background-size:cover;
 	width:100%;
-	padding: 0 60px 181px;
+	padding: 0 60px 165px;
 }
 
 
@@ -180,9 +180,9 @@
 @media screen and (max-width: 1450px) {
 	
 	
-	#section_seven {
-		height: 1000px;
-	}
+	// #section_seven {
+	// 	height: 1000px;
+	// }
 	
 	
 	.sec_seven_slider {
