--- a/wp-content/themes/dermer/css/scss/homepage/_section_eight.scss
+++ b/wp-content/themes/dermer/css/scss/homepage/_section_eight.scss
@@ -40,7 +40,7 @@
 		text-transform: uppercase;
 		display: block;
 		float:right;
-		// max-width: 355px;
+		max-width: 355px;
 		line-height: 29px;
 		letter-spacing: 0.16em;
 		font-family: $montserrat;
