--- a/wp-content/themes/dermer/css/scss/homepage/_section_four.scss
+++ b/wp-content/themes/dermer/css/scss/homepage/_section_four.scss
@@ -94,7 +94,7 @@
 			width:100%;
 			height:5px;
 			background:$beige;
-			margin:0 0 25px;
+			margin:0 0 30px;
 		}
 	}
 }
@@ -208,7 +208,7 @@
 		}
 		span.sec_four_caption {
 			max-width:100%;
-			margin: 20px 0 0;
+			margin:0;
 			float:none;
 			//text-align: center;
 		}
