--- a/wp-content/themes/dermer/css/scss/_footer.scss
+++ b/wp-content/themes/dermer/css/scss/_footer.scss
@@ -187,7 +187,7 @@ span.footer_design {
 		color:#fff;
 		font-family: $playfair;
 		font-weight: 700;
-		font-size:32px;
+		font-size:34px;
 		line-height: 52px;
 	  max-width: 750px;
 		margin:14px auto 0;
@@ -366,8 +366,6 @@ footer {
 
 @media screen and (max-width: 1450px) {
 	
-	
-	
 .footer_left {
 	flex-basis: 504px;
 	span.large_header {
@@ -384,7 +382,11 @@ footer {
  
  .footer_right_inner {
    padding: 121px 0 118px;
+   
+	span.free_case_excerpt {
+		font-size:32px;
 	}
+}
 	
 	
 } /* Media Query */
