--- a/wp-content/themes/dermer/css/scss/homepage/_section_one.scss
+++ b/wp-content/themes/dermer/css/scss/homepage/_section_one.scss
@@ -179,6 +179,10 @@ html.no-webp {
 
 @media screen and (max-width: 1250px) {
 	
+	
+	.section_one_inner {
+		padding: 144px 125px 0;
+	}
 
 html.webp {
 	#section_one {
